--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,8 @@
 							src="images/dest/insatgram-dark.png" alt="insatgram"></a>
 					<a href="https://vk.com/ivinartem" class="social__item" target="_blank"><img
 							src="images/dest/vk-dark.png" alt="vk"></a>
-					<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__item" target="_blank"><img src="images/dest/whatsapp-dark.png"
-							alt="whatsapp"></a>
+					<a href="https://api.whatsapp.com/send?phone=79537385366=" class="social__item" target="_blank"><img
+							src="images/dest/whatsapp-dark.png" alt="whatsapp"></a>
 				</div>
 
 				<a href="#" class="nav_btn" id="nav_btn">
@@ -153,6 +153,28 @@
 	</section>
 	<!-- /.now -->
 
+	<section class="education">
+		<div class="heading">
+			<h2 class="heading__title"><span class="heading__title heading__title--accent">З</span>ачем
+			</h2>
+			<p class="heading__subtitle">нужен трейдинг и инвестиции</p>
+		</div>
+		<div class="education__slider">
+			<div class="slider__item">
+				<img src="images/dest/education1.jpg" alt="">
+			</div>
+			<div class="slider__item">
+				<img src="images/dest/education-2.jpg" alt="">
+			</div>
+			<div class="slider__item">
+				<img src="images/dest/education-3.jpg" alt="">
+			</div>
+			<div class="slider__item">
+				<img src="images/dest/education-4.jpg" alt="">
+			</div>
+		</div>
+	</section>
+
 	<!-- Benefits -->
 	<section class="benefits" id="benefits">
 		<div class="container">
@@ -226,6 +248,69 @@
 	</section>
 	<!-- /.benefits -->
 
+	<!-- stat -->
+	<section class="stat">
+		<div class="container">
+			<div class="stat__author">
+				<img src="images/dest/artem.png" alt="Артём Ивин">
+			</div>
+			<div class="stat__content">
+				<div class="heading">
+					<h2 class="heading__title heading__title--left"><span
+							class="heading__title heading__title--accent"></span>Статистика</h2>
+					<p class="heading__subtitle heading__subtitle--left"><a class="now__description--accent"
+							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet"
+							target="_blank">открыта и говорит сама за себя</a></p>
+				</div>
+				<div class="popup-gallery">
+					<a href="images/dest/stat1.png" class="popup__prev"><img src="images/dest/stat-prev1.jpg"></a>
+					<a href="images/dest/stat2.png" class="popup__prev"><img src="images/dest/stat-prev2.jpg"></a>
+					<a href="images/dest/stat3.jpg" class="popup__prev"><img src="images/dest/stat-prev3.jpg"></a>
+					<a href="images/dest/stat4.jpg" class="popup__prev"><img src="images/dest/stat-prev4.jpg"></a>
+					<a href="images/dest/stat5.jpg" class="popup__prev"><img src="images/dest/stat-prev5.jpg"></a>
+					<!-- <a href="images/dest/stat6.jpg" class="popup__prev"><img src="images/dest/stat-prev6.jpg"></a> -->
+					<a href="images/dest/stat7.jpg" class="popup__prev"><img src="images/dest/stat-prev7.jpg"></a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- /.stat -->
+
+	<!-- Reviews -->
+	<section class="reviews" id="reviews">
+		<div class="container">
+			<div class="heading">
+				<h2 class="heading__title"><span class="heading__title heading__title--accent">Отзывы</span>
+				</h2>
+				<p class="heading__subtitle">тех, кто уже зарабатывает</p>
+			</div>
+			<div class="reviews__content slider">
+				<div class="reviews__item">
+					<img src="images/dest/rev1.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/rev2.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/rev3.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/rev4.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/rev5.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/rev6.png" alt="reviews">
+				</div>
+				<div class="reviews__item">
+					<img src="images/dest/rev7.png" alt="reviews">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- /.review -->
+
 	<!-- Rate -->
 	<section class="rate" id="rate">
 		<div class="container">
@@ -286,16 +371,19 @@
 
 								<div class="radio__wrap">
 									<input name="rate" class="radio__price" type="radio" id="rate1" checked>
-									<label for="rate1" class="radio__label" onclick="change1()">Цена за 1 месяц: <span class="item__price--accent">1 000р</span></label>
+									<label for="rate1" class="radio__label" onclick="change1()">Цена за 1 месяц: <span
+											class="item__price--accent">1 000р</span></label>
 								</div>
 
 								<div class="radio__wrap">
 									<input name="rate" class="radio__price" type="radio" id="rate2">
-									<label for="rate2" class="radio__label" onclick="change2()">Цена за 1 год: <span class="item__price--accent">10 000р</span></label>
+									<label for="rate2" class="radio__label" onclick="change2()">Цена за 1 год: <span
+											class="item__price--accent">10 000р</span></label>
 								</div>
 
 							</div>
-							<a href="https://vk.com/away.php?to=https%3A%2F%2Fauth.robokassa.ru%2FMerchant%2FIndex.aspx%3FMerchantLogin%3Dartemivin.ru%26InvId%3D0%26Culture%3Dru%26Encoding%3Dutf-8%26Description%3DTELEGRAM%25201%2520MONTH%26OutSum%3D1000%26SignatureValue%3D5e14e9791a371b4e929e375b1c427a86&cc_key=" class="rate__pay btn" id="robokassa" target="_blank">Оплатить</a>
+							<a href="https://vk.com/away.php?to=https%3A%2F%2Fauth.robokassa.ru%2FMerchant%2FIndex.aspx%3FMerchantLogin%3Dartemivin.ru%26InvId%3D0%26Culture%3Dru%26Encoding%3Dutf-8%26Description%3DTELEGRAM%25201%2520MONTH%26OutSum%3D1000%26SignatureValue%3D5e14e9791a371b4e929e375b1c427a86&cc_key="
+								class="rate__pay btn" id="robokassa" target="_blank">Оплатить</a>
 						</div>
 					</div>
 				</div>
@@ -304,65 +392,6 @@
 		</div>
 	</section>
 	<!-- /.rate -->
-
-	<!-- Reviews -->
-	<section class="reviews" id="reviews">
-		<div class="container">
-			<div class="heading">
-				<h2 class="heading__title"><span class="heading__title heading__title--accent">Статистика и отзывы</span>
-				</h2>
-				<p class="heading__subtitle"> </p>
-			</div>
-			<div class="reviews__content slider">
-				<div class="reviews__item">
-					<img src="images/dest/stat1.jpg" alt="stat">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/stat2.jpg" alt="stat">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/stat3.jpg" alt="stat">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/stat4.jpg" alt="stat">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/stat5.jpg" alt="stat">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/stat6.jpg" alt="stat">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/stat7.jpg" alt="stat">
-				</div>
-			</div>
-			<div class="reviews__content slider">
-				<div class="reviews__item">
-					<img src="images/dest/rev1.jpg" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/rev2.jpg" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/rev3.jpg" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/rev4.jpg" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/rev5.jpg" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/rev6.jpg" alt="reviews">
-				</div>
-				<div class="reviews__item">
-					<img src="images/dest/rev7.jpg" alt="reviews">
-				</div>
-			</div>
-
-		</div>
-	</section>
-	<!-- /.review -->
 
 	<!-- FAQ -->
 	<section class="faq" id="faq">
@@ -519,7 +548,6 @@
 
 	<!-- Form -->
 	<section class="form" id="form">
-		<img src="images/dest/artem.png" alt="author" class="form__author">
 		<div class="container">
 			<div class="heading">
 				<h2 class="heading__title"><span class="heading__title heading__title--accent">Запишитесь на курс</span>
@@ -527,38 +555,46 @@
 				<p class="heading__subtitle">Если дать человеку рыбу, он будет сыт один день, если научить его ловить рыбу,
 					он будет сыт всю жизнь. Конфуций</p>
 			</div>
-			<div class="form__content" id="form">
-				<form action="#" id="form__send" method="POST" class="form__wrap">
-					<label for="name" class="form__label">Ваше имя:</label>
-					<input type="text" id="name" name="name" class="form__input _req _name" placeholder="Артём Ивин">
-					<label for="tel" class="form__label">Ваш телефон:</label>
-					<input type="text" id="tel" name="tel" class="form__input _req _phone" placeholder="+79537777777">
-					<label for="email" class="form__label">Ваш E-mail:</label>
-					<input type="text" id="email" name="email" class="form__input _req _email" placeholder="example@mail.ru">
-					<label for="tarif" class="form__label">Выбор тарифа:</label>
-					<div class="select" data-state="">
-						<div class="select__title" data-default="Option 0">Индивидуальный курс</div>
-						<div class="select__content">
-							<input id="singleSelect0" class="select__input" type="radio" value="Индивидуальный курс"
-								name="tarif" checked />
-							<label for="singleSelect0" class="select__label">Индивидуальный курс</label>
-							<input id="singleSelect1" class="select__input" type="radio" value="Индивидуальная консультация"
-								name="tarif" />
-							<label for="singleSelect1" class="select__label">Индивидуальная консультация</label>
-							<input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц"
-								name="tarif" />
-							<label for="singleSelect2" class="select__label">Сигналы 1 месяц</label>
-							<input id="singleSelect3" class="select__input" type="radio" value="Сигналы 1 год" name="tarif" />
-							<label for="singleSelect3" class="select__label">Сигналы 1 год</label>
+			<div class="form__wrapper">
+
+				<div class="form__content" id="form">
+					<form action="#" id="form__send" method="POST" class="form__wrap">
+						<label for="name" class="form__label">Ваше имя:</label>
+						<input type="text" id="name" name="name" class="form__input _req _name" placeholder="Артём Ивин">
+						<label for="tel" class="form__label">Ваш телефон:</label>
+						<input type="text" id="tel" name="tel" class="form__input _req _phone" placeholder="+79537777777">
+						<label for="email" class="form__label">Ваш E-mail:</label>
+						<input type="text" id="email" name="email" class="form__input _req _email"
+							placeholder="example@mail.ru">
+						<label for="tarif" class="form__label">Выбор тарифа:</label>
+						<div class="select" data-state="">
+							<div class="select__title" data-default="Option 0">Индивидуальный курс</div>
+							<div class="select__content">
+								<input id="singleSelect0" class="select__input" type="radio" value="Индивидуальный курс"
+									name="tarif" checked />
+								<label for="singleSelect0" class="select__label">Индивидуальный курс</label>
+								<input id="singleSelect1" class="select__input" type="radio" value="Индивидуальная консультация"
+									name="tarif" />
+								<label for="singleSelect1" class="select__label">Индивидуальная консультация</label>
+								<input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц"
+									name="tarif" />
+								<label for="singleSelect2" class="select__label">Сигналы 1 месяц</label>
+								<input id="singleSelect3" class="select__input" type="radio" value="Сигналы 1 год"
+									name="tarif" />
+								<label for="singleSelect3" class="select__label">Сигналы 1 год</label>
+							</div>
 						</div>
-					</div>
-					<div class="personal">
-						<input type="checkbox" id="personal" checked name="personal" class="personal__checkbox _req"">
+						<div class="personal">
+							<input type="checkbox" id="personal" checked name="personal" class="personal__checkbox _req"">
 						<label for="personal" class="personal__label"><span> Согласен(а) на <a href="#" class="personal__link">обработку
-								персональных данных</a></span></label>
-					</div>
-					<button type="submit" class="btn form__btn">Записаться на курс</button>
-				</form>
+									персональных данных</a></span></label>
+						</div>
+						<button type="submit" class="btn form__btn">Записаться на курс</button>
+					</form>
+				</div>
+				<div class="form__image">
+					<img src="images/dest/form-bg.png" alt="form">
+				</div>
 			</div>
 
 		</div>
@@ -690,7 +726,7 @@
 	<!-- Modals -->
 
 	<!-- Personal -->
-	<div id="personal" class="bg__modal">
+	<div id="personal__popup" class="bg__modal">
 		<div class="modals">
 			<div class="modals__wrap">
 				<a href="#" class="close"><img src="images/dest/close.png" alt="close"></a>
