--- a/todo.html
+++ b/todo.html
@@ -1,15 +1,12 @@
 <!-- 
-*.1. Значек биткоина и рамка, убрать
-*.2 В тарифах выровнять текст влево и добавить поп апы с подробностями курсов
-* 
-*. Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
-todo 9.Не хватает информационного блока с кратким ознакомлением, что такое трейдинг и инвестиции. Хотя бы краткую информации. Это будет полезно не только для пользователей, но и для SEO и индексировании поисковыми роботами.
-* 10.Желтый круг на переднем фото убрать, пестрит.
-
-* 4.Доработка отзывов
-
-* 4.Секция статистика
-* 5 Реализовать кнопки оплаты ROBOCASSA
+*.1. Значек биткоина и рамка, убрать 200р
+*.2 В тарифах выровнять текст влево и добавить поп апы с подробностями курсов 300р
+* 3.Блок Зачем нужен трейдинг 400р.
+* 4.Желтый круг на переднем фото убрать, пестрит. 200р
+* 5.Переработка отзывов 400р
+* 6 Секция статистика дизайн плюс верстка 400р
+* 7 Реализовать кнопки оплаты ROBOCASSA 200р
+* 8 Замена изображения форма, статистика (правка стилей на всех разрешениях) 200р
 
 
 Мелкие доработки
@@ -20,11 +17,14 @@ todo 9.Не хватает информационного блока с крат
 *.5 Для пунктов меню и иконок соцсетей .добавить ховер 
 *.6 В мобильной версии уменьшить пространстов после " подитика конфиденциальности" 
 *.7 в мобильной версии кнопку записаться на курс выровнять по центру как остальные
-* 3.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
+* 8 Поднять заголовок
+*300р
 
 ! Мои неджоработки
 
-! 1. в мобильной версии кнопка whatsapp не работает
+* 1. в мобильной версии кнопка whatsapp не работает
+*.3 Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
+* 3.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
 
 
 
