--- a/todo.html
+++ b/todo.html
@@ -1,15 +1,15 @@
 <!-- 
-*.1. Значек биткоина и рамка, убрать 200р
+*.1. Значек биткоина и рамка, убрать (Правка стилей на всех разрешениях) 200р 
 *.2 В тарифах выровнять текст влево и добавить поп апы с подробностями курсов 300р
 * 3.Блок Зачем нужен трейдинг 400р.
-* 4.Желтый круг на переднем фото убрать, пестрит. 200р
-* 5.Переработка отзывов 400р
-* 6 Секция статистика дизайн плюс верстка 400р
-* 7 Реализовать кнопки оплаты ROBOCASSA 200р
+* 4.Желтый круг на переднем фото убрать, пестрит. (Правка стилей на всех разрешениях) 200р
+* 5.Переработка отзывов 300р
+* 6 Секция статистика дизайн плюс верстка 300р
+* 7 Реализовать кнопки оплаты ROBOCASSA 300р
 * 8 Замена изображения форма, статистика (правка стилей на всех разрешениях) 200р
 
 
-Мелкие доработки
+*Мелкие доработки
 * 1.Статистика открыта и говорит сама за себя- ссылку лучше в новом окне чтобы открывалась
 * 2.Ссылки на соцсети лучше также открывать в новом окне, чтобы не уводить с сайта
 * 3.В сообщении после отправки заявки лучше указать не только, что она принята, а чего теперь ждать(написать что мы с вами свяжемся ближайшее время)
@@ -18,18 +18,14 @@
 *.6 В мобильной версии уменьшить пространстов после " подитика конфиденциальности" 
 *.7 в мобильной версии кнопку записаться на курс выровнять по центру как остальные
 * 8 Поднять заголовок
-*300р
+*8 сгладить фоновые изображения, подправить отступы
+*400р
 
 ! Мои неджоработки
-
 * 1. в мобильной версии кнопка whatsapp не работает
 *.3 Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
 * 3.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
-
-
-
-? Работает
-
-? 6.Когда подаёшь заявку плашка с «Спасибо» не закрывается, нужно именно выходить из страницы, а хотелось бы остаться на сайте.
+! 4.Окно спасибо, подправить.
+* заявка с формы (проверить Емаил)
 
 -->
