--- a/todo.html
+++ b/todo.html
@@ -21,11 +21,11 @@
 *8 сгладить фоновые изображения, подправить отступы
 *400р
 
-! Мои неджоработки
+* Мои неджоработки
 * 1. в мобильной версии кнопка whatsapp не работает
 *.3 Контактная форма не проверяет правильность заполнения полей (я в телефон указал буквы, в почте - кириллицу и спец.символы)
 * 3.На айфон 11 в списке для выбора тарифа не вмещаются полные названия. По последним двум непонятно в чем разница.
-! 4.Окно спасибо, подправить.
+* 4.Окно спасибо, подправить.
 * заявка с формы (проверить Емаил)
 
 -->
