--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,8 @@
 	<meta charset="utf-8">
 	<title>Трейдинг и инвестиции</title>
 	<meta name="title" content="Трейдинг и инвестиции">
-	<meta name="description" content="Индивидуальное обучение трейдингу от Артёма Ивина. Пошагово через демонстрацию экрана я покажу и расскажу как найти, проанализировать технически и фундаментально, купить, и продать акции компании с прибылью. Этот курс позволит тебе стабильно зарабатывать на фондовом рынке">
+	<meta name="description"
+		content="Индивидуальное обучение трейдингу от Артёма Ивина. Пошагово через демонстрацию экрана я покажу и расскажу как найти, проанализировать технически и фундаментально, купить, и продать акции компании с прибылью. Этот курс позволит тебе стабильно зарабатывать на фондовом рынке">
 	<meta name="viewport" content="width=device-width">
 	<link rel="icon" href="images/favicon.png">
 	<meta property="og:url" content="artemivin.ru">
@@ -58,12 +59,12 @@
 				</a>
 
 				<div class="nav">
-					<a href="#" data-scroll="#about" class="nav__item">О нас</a>
-					<a href="#" data-scroll="#benefits" class="nav__item">Преимущества</a>
+					<a href="#" data-scroll="#about" class="nav__item">О курсе</a>
+					<a href="#" data-scroll="#benefits" class="nav__item">Программа курса</a>
 					<a href="#" data-scroll="#reviews" class="nav__item">Отзывы</a>
 					<a href="#" data-scroll="#rate" class="nav__item">Тарифы</a>
 					<a href="#" data-scroll="#faq" class="nav__item">FAQ</a>
-					<a href="#" data-scroll="#contacts" class="nav__item">КОНТАКТЫ</a>
+					<a href="#" data-scroll="#contacts" class="nav__item">Контакты</a>
 				</div>
 			</div>
 		</div>
@@ -74,28 +75,32 @@
 		<div class="container">
 			<div class="main__content">
 				<div class="description">
-					<h1 class="description__title">Трейдинг и<br>инвестиции</h1>
+					<h1 class="description__title">Трейдинг<br> и инвестиции</h1>
 					<p class="description__subtitle" id="Ticker">Обучение трейдингу от Артема Ивина</p>
 
 					<div class="included">
 						<ul class="included__list">
 							<li class="included__item">100% индивидуальное обучение по Skype,
-</li>
-<li class="included__item">где ответят на ВАШИ вопросы,</li>
-<li class="included__item">на примере ВАШИХ компаний,</li>
-<li class="included__item">с рекомендациями в реальном времени.</li>
-<li class="included__item">Вы получите пошаговый алгоритм действий</li>
-<li class="included__item">Объяснение через демонстрацию экрана</li> 
+							</li>
+							<li class="included__item">где ответят на ВАШИ вопросы,</li>
+							<li class="included__item">на примере ВАШИХ компаний,</li>
+							<li class="included__item">с рекомендациями в реальном времени.</li>
+							<li class="included__item">Вы получите пошаговый алгоритм действий</li>
+							<li class="included__item">Объяснение через демонстрацию экрана</li>
 
-							
+
 						</ul>
 						<ul class="included__list">
-<li class="included__item">Фундаментальный и техн. анализ</li>
+							<li class="included__item">Фундаментальный и техн. анализ</li>
 							<li class="included__item">Разбор и составление портфеля</li>
-							<li class="included__item">Торговые сигналы по акциям</li></li>
-<li class="included__item">Занятия в удобное ВАМ время</li></li> 
-<li class="included__item">Объяснение простым языком</li></li> 
-<li class="included__item">Подходит и для начинающих</li></li> 
+							<li class="included__item">Торговые сигналы по акциям</li>
+							</li>
+							<li class="included__item">Занятия в удобное ВАМ время</li>
+							</li>
+							<li class="included__item">Объяснение простым языком</li>
+							</li>
+							<li class="included__item">Подходит и для начинающих</li>
+							</li>
 
 						</ul>
 					</div>
@@ -153,10 +158,10 @@
 							href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet"
 							target="_blank">-Статистика полностью
 							открыта <br> </a>-Есть разные портфели:</span>
-<span>Трейдинг(Тинькофф)</span>
+					<span>Трейдинг(Тинькофф)</span>
 					<span>Инвестиционный и дивидендный(ВТБ) <br> Среднесрочный(Финам) </span>
 					<span>Криптовалютный(Binance)</span>
-<span>Портфель из ETF(Сбер) </span>
+					<span>Портфель из ETF(Сбер) </span>
 					<span>Портфель для участия в IPO(Freedom Finance) </span>
 				</p>
 			</div>
@@ -602,32 +607,32 @@
 			<div class="slider__item">
 				<img src="images/dest/education-12.jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.5.jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.6jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.7jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.8jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.9jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.10jpg" alt="">
 
-</div>
-<div class="slider__item">
+			</div>
+			<div class="slider__item">
 				<img src="images/dest/education12.11jpg" alt="">
 
 
@@ -637,10 +642,10 @@
 			</div>
 			<div class="slider__item">
 				<img src="images/dest/education-13.jpg" alt="">
-<div class="slider__item">
-						</div>
-</div>
+				<div class="slider__item">
 				</div>
+			</div>
+		</div>
 	</section>
 
 	<!-- INFO -->
@@ -673,7 +678,7 @@
 			<div class="heading">
 				<h2 class="heading__title"><span class="heading__title heading__title--accent">Запишитесь на курс</span>
 				</h2>
-				 			</div>
+			</div>
 			<div class="form__wrapper">
 
 				<div class="form__content" id="form">
@@ -689,11 +694,11 @@
 						<div class="select" data-state="">
 							<div class="select__title" data-default="Option 0">Полный Индивидуальный курс 7 занятий</div>
 							<div class="select__content">
-								<input id="singleSelect0" class="select__input" type="radio" value="Полный индивидуальный курс 7 занятий"
-									name="tarif" checked />
+								<input id="singleSelect0" class="select__input" type="radio"
+									value="Полный индивидуальный курс 7 занятий" name="tarif" checked />
 								<label for="singleSelect0" class="select__label">Полный Индивидуальный курс 7 занятий</label>
-								<input id="singleSelect1" class="select__input" type="radio" value="Индивидуальная консультация 60 минут"
-									name="tarif" />
+								<input id="singleSelect1" class="select__input" type="radio"
+									value="Индивидуальная консультация 60 минут" name="tarif" />
 								<label for="singleSelect1" class="select__label">Индивидуальная консультация 60 минут</label>
 								<input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц"
 									name="tarif" />
@@ -705,7 +710,7 @@
 						</div>
 						<div class="personal">
 							<input type="checkbox" id="personal" checked name="personal" class="personal__checkbox _req"">
-						<label for="personal" class="personal__label"><span> Согласен(а) на <a href="#" class="personal__link">обработку
+						<label for=" personal" class="personal__label"><span> Согласен(а) на <a href="#" class="personal__link">обработку
 									персональных данных</a></span></label>
 						</div>
 						<button type="submit" class="btn form__btn">Записаться на курс</button>
@@ -780,66 +785,66 @@
 		<div class="modals">
 			<div class="modals__wrap">
 				<a href="#" class="close"><img src="images/dest/close.png" alt="close"></a>
-				
-					<h2>Политика конфиденциальности и защиты информации.</h2>
-				</div>
-				<p class="text-center">Оставляя данные на сайте, Вы соглашаетесь с Политикой конфиденциальности и защиты
-					информации.
 
-				<h5>Защита данных</h5>
-
-				<p>Администрация сайта artemivin.ru (далее Сайт) не может передать или раскрыть информацию, предоставленную
-					пользователем (далее Пользователь) при регистрации и использовании функций сайта третьим лицам, кроме
-					случаев, описанных законодательством страны, на территории которой пользователь ведет свою деятельность.
-				</p>
-
-				<h5>Получение персональной информации</h5>
-
-				<p>Для коммуникации на сайте пользователь обязан внести некоторую персональную информацию. Для проверки
-					предоставленных данных, сайт оставляет за собой право потребовать доказательства идентичности в онлайн
-					или
-					офлайн режимах.</p>
-
-				<h5>Использование персональной информации</h5>
-
-				<p>Сайт использует личную информацию Пользователя для обслуживания и для улучшения качества предоставляемых
-					услуг. Часть персональной информации может быть предоставлена банку или платежной системе, в случае, если
-					предоставление этой информации обусловлено процедурой перевода средств платежной системе, услугами
-					которой
-					Пользователь желает воспользоваться. Сайт прилагает все усилия для сбережения в сохранности личных данных
-					Пользователя. Личная информация может быть раскрыта в случаях, описанных законодательством, либо когда
-					администрация сочтет подобные действия необходимыми для соблюдения юридической процедуры, судебного
-					распоряжения или легального процесса необходимого для работы Пользователя с Сайтом. В других случаях, ни
-					при
-					каких условиях, информация, которую Пользователь передает Сайту, не будет раскрыта третьим лицам.</p>
-
-				<h5>Коммуникация</h5>
-
-				<p>После того, как Пользователь оставил данные, он получает сообщение, подтверждающее его успешную
-					регистрацию.
-					Пользователь имеет право в любой момент прекратить получение информационных бюллетеней воспользовавшись
-					соответствующим сервисом в Сайте.</p>
-
-				<h5>Ссылки</h5>
-
-				<p> На сайте могут содержаться ссылки на другие сайты. Сайт не несет ответственности за содержание, качество
-					и
-					политику безопасности этих сайтов. Данное заявление о конфиденциальности относится только к информации,
-					размещенной непосредственно на сайте.</p>
-
-				<h5>Безопасность</h5>
-
-				<p>Сайт обеспечивает безопасность учетной записи Пользователя от несанкционированного доступа.</p>
-
-				<h5>Уведомления об изменениях</h5>
-
-				<p>Сайт оставляет за собой право вносить изменения в Политику конфиденциальности без дополнительных
-					уведомлений. Нововведения вступают в силу с момента их опубликования. Пользователи могут отслеживать
-					изменения в Политике конфиденциальности самостоятельно.</p>
-				</p>
-				<a class="close2" href="#">Закрыть</a>
+				<h2>Политика конфиденциальности и защиты информации.</h2>
 			</div>
+			<p class="text-center">Оставляя данные на сайте, Вы соглашаетесь с Политикой конфиденциальности и защиты
+				информации.
+
+			<h5>Защита данных</h5>
+
+			<p>Администрация сайта artemivin.ru (далее Сайт) не может передать или раскрыть информацию, предоставленную
+				пользователем (далее Пользователь) при регистрации и использовании функций сайта третьим лицам, кроме
+				случаев, описанных законодательством страны, на территории которой пользователь ведет свою деятельность.
+			</p>
+
+			<h5>Получение персональной информации</h5>
+
+			<p>Для коммуникации на сайте пользователь обязан внести некоторую персональную информацию. Для проверки
+				предоставленных данных, сайт оставляет за собой право потребовать доказательства идентичности в онлайн
+				или
+				офлайн режимах.</p>
+
+			<h5>Использование персональной информации</h5>
+
+			<p>Сайт использует личную информацию Пользователя для обслуживания и для улучшения качества предоставляемых
+				услуг. Часть персональной информации может быть предоставлена банку или платежной системе, в случае, если
+				предоставление этой информации обусловлено процедурой перевода средств платежной системе, услугами
+				которой
+				Пользователь желает воспользоваться. Сайт прилагает все усилия для сбережения в сохранности личных данных
+				Пользователя. Личная информация может быть раскрыта в случаях, описанных законодательством, либо когда
+				администрация сочтет подобные действия необходимыми для соблюдения юридической процедуры, судебного
+				распоряжения или легального процесса необходимого для работы Пользователя с Сайтом. В других случаях, ни
+				при
+				каких условиях, информация, которую Пользователь передает Сайту, не будет раскрыта третьим лицам.</p>
+
+			<h5>Коммуникация</h5>
+
+			<p>После того, как Пользователь оставил данные, он получает сообщение, подтверждающее его успешную
+				регистрацию.
+				Пользователь имеет право в любой момент прекратить получение информационных бюллетеней воспользовавшись
+				соответствующим сервисом в Сайте.</p>
+
+			<h5>Ссылки</h5>
+
+			<p> На сайте могут содержаться ссылки на другие сайты. Сайт не несет ответственности за содержание, качество
+				и
+				политику безопасности этих сайтов. Данное заявление о конфиденциальности относится только к информации,
+				размещенной непосредственно на сайте.</p>
+
+			<h5>Безопасность</h5>
+
+			<p>Сайт обеспечивает безопасность учетной записи Пользователя от несанкционированного доступа.</p>
+
+			<h5>Уведомления об изменениях</h5>
+
+			<p>Сайт оставляет за собой право вносить изменения в Политику конфиденциальности без дополнительных
+				уведомлений. Нововведения вступают в силу с момента их опубликования. Пользователи могут отслеживать
+				изменения в Политике конфиденциальности самостоятельно.</p>
+			</p>
+			<a class="close2" href="#">Закрыть</a>
 		</div>
+	</div>
 	</div>
 	<!-- Modals -->
 
@@ -904,7 +909,12 @@
 				<div class="title__block">
 					<h4 class="more__title">Индивидуальный курс технического и фундаментального анализа</h4>
 				</div>
-				<p>Занятия проходят по Skype или Zoom, индивидуально, в удобное вам время, у вас будет возможность задать любые вопросы как по трейдингу и инвестированию, так и по ipo и криптовалютам. Материал доносится простым понятным языком с примерами и пошаговым алгоритмом действий, чтобы после окончания курса вы смогли самостоятельно найти, проанализировать технически и фундаментально, найти точку входа и купить акцию, и продать с прибылью. Вам будут даны все инструменты, которые позволяют мне зарабатывать и я покажу и расскажу абсолютно все, что делаю сам на примере своих сделок.</p>
+				<p>Занятия проходят по Skype или Zoom, индивидуально, в удобное вам время, у вас будет возможность задать
+					любые вопросы как по трейдингу и инвестированию, так и по ipo и криптовалютам. Материал доносится простым
+					понятным языком с примерами и пошаговым алгоритмом действий, чтобы после окончания курса вы смогли
+					самостоятельно найти, проанализировать технически и фундаментально, найти точку входа и купить акцию, и
+					продать с прибылью. Вам будут даны все инструменты, которые позволяют мне зарабатывать и я покажу и
+					расскажу абсолютно все, что делаю сам на примере своих сделок.</p>
 				<a class="close2" href="#">Закрыть</a>
 			</div>
 		</div>
@@ -917,7 +927,11 @@
 					<h4 class="more__title">1 Индивидуальная консультация по SKYPE, 60 минут</h4>
 
 				</div>
-				<p>У вас скопилось много вопросов о фондовом рынке или нужно сделать разбор и ребалансировку портфеля с разбором каждой акции? Вам хочется понять тактику и стратегию действий на фондовом рынке и понять как зарабатывать больше? У вас возникла сложная ситуация с конкретной акцией и необходима помощь опытного наставника? Тогда вам идеально подойдет индивидуальная консультация по скайпу, на которой у вас будет возможность задать все вопросы и получить на них исчерпывающие ответы&nbsp;</p>
+				<p>У вас скопилось много вопросов о фондовом рынке или нужно сделать разбор и ребалансировку портфеля с
+					разбором каждой акции? Вам хочется понять тактику и стратегию действий на фондовом рынке и понять как
+					зарабатывать больше? У вас возникла сложная ситуация с конкретной акцией и необходима помощь опытного
+					наставника? Тогда вам идеально подойдет индивидуальная консультация по скайпу, на которой у вас будет
+					возможность задать все вопросы и получить на них исчерпывающие ответы&nbsp;</p>
 				<a class="close2" href="#">Закрыть</a>
 			</div>
 		</div>
@@ -929,7 +943,10 @@
 				<div class="title__block">
 					<h4 class="more__title">Сигналы на покупку и продажу акций</h4>
 				</div>
-				<p>Каждый день я смотрю 100 графиков разных компаний. Я выбираю из них 2-3 и нажимаю кнопку "купить". Каждая компания проверена по фундаменталу, имеет точку входа технически и имеет хорошие прогнозы аналитиков и потенциал роста. Также сигналы даются на вход в конкретные ipo и покупку и продажу криптовалют. Статистика говорит сама за себя&nbsp;</p>
+				<p>Каждый день я смотрю 100 графиков разных компаний. Я выбираю из них 2-3 и нажимаю кнопку "купить". Каждая
+					компания проверена по фундаменталу, имеет точку входа технически и имеет хорошие прогнозы аналитиков и
+					потенциал роста. Также сигналы даются на вход в конкретные ipo и покупку и продажу криптовалют.
+					Статистика говорит сама за себя&nbsp;</p>
 				<a class="close2" href="#">Закрыть</a>
 			</div>
 		</div>
